--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,13 +5,14 @@
   "description": "팔로우했지만 나를 팔로우하지 않는 트위터 계정을 찾습니다.",
   "permissions": ["activeTab", "scripting"],
   "host_permissions": ["https://twitter.com/*"],
+  "icons": {
+    "16": "logo16.png",
+    "48": "logo48.png",
+    "128": "logo128.png"
+  },
   "action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    }
+    "default_icon":"logo128.png"
   },
   "background": {
     "service_worker": "background.js",
