--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "X Unfollow Checker",
   "version": "1.0",
   "description": "팔로우했지만 나를 팔로우하지 않는 트위터 계정을 찾습니다.",
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting", "storage"],
   "host_permissions": ["https://twitter.com/*"],
   "icons": {
     "16": "logo16.png",
@@ -12,7 +12,7 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_icon":"logo128.png"
+    "default_icon": "logo128.png"
   },
   "background": {
     "service_worker": "background.js",
